--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,10 @@ loader_version_range=[4,)
 kff_version=5.5.0
 kff_version_range=[5.5,)
 
+# Infiniverse
+infiniverse_branch=infiniverse-1.21
+infiniverse_version=2.0.1.0
+
 ## Mod Properties
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
