added Past-el Palettes support

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,9 @@ kff_version_range=[5.5,)
 infiniverse_branch=infiniverse-1.21
 infiniverse_version=2.0.1.0
 
+# Past-el Palettes
+pp_version_range=[1.0.0,)
+
 ## Mod Properties
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
@@ -40,7 +43,7 @@ mod_name=Mystcraft: Ageless
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=GNU GPLv3
 # The mod version. See https://semver.org/
-mod_version=0.1.1-alpha
+mod_version=0.2.0-alpha
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
