--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ repositories {
         setUrl("https://thedarkcolour.github.io/KotlinForForge/")
     }
     maven { url "https://maven.commoble.net/" }
+
+    flatDir {
+        dir "libs"
+    }
 }
 
 base {
@@ -111,6 +115,8 @@ dependencies {
     implementation("thedarkcolour:kotlinforforge-neoforge:$kff_version")
 
     implementation ("net.commoble.infiniverse:${infiniverse_branch}:${infiniverse_version}")
+
+    implementation ("com.mynamesraph:past_el_palettes")
     // Example optional mod dependency with JEI
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
     // compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
@@ -152,7 +158,8 @@ tasks.withType(ProcessResources).configureEach {
             mod_license            : mod_license,
             mod_version            : mod_version,
             mod_authors            : mod_authors,
-            mod_description        : mod_description
+            mod_description        : mod_description,
+            pp_version_range: pp_version_range
     ]
     inputs.properties replaceProperties
 
